--- a/packages/filepond/pubspec.yaml
+++ b/packages/filepond/pubspec.yaml
@@ -1,7 +1,7 @@
 name: filepond
 description: "A new Flutter plugin project."
 version: 0.0.1
-homepage:
+homepage: https://github.com/devnoaman/filepond
 resolution: workspace
 
 environment:
@@ -14,6 +14,7 @@ dependencies:
   file_picker: ^10.1.9
   flutter:
     sdk: flutter
+  path: ^1.9.1
   plugin_platform_interface: ^2.0.2
 
 dev_dependencies:
