--- a/packages/filepond/pubspec.yaml
+++ b/packages/filepond/pubspec.yaml
@@ -1,5 +1,5 @@
 name: filepond
-description: "A new Flutter plugin project."
+description: "FilePond, Where files go to stretch their bits."
 version: 0.0.1
 homepage: https://github.com/devnoaman/filepond
 resolution: workspace
